--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -80,6 +80,16 @@
       display: none;
   }
 
+  .click-me {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 15px;
+  }
+  .card {
+    position: relative;
+  }
+
   /* Media queries - Responsive timeline on screens less than 600px wide */
   @media screen and (max-width: 600px) {
 
@@ -117,4 +127,12 @@
     .right-2 {
       left: 0%;
     }
+  }
+
+  .filter-bar {
+    margin-bottom: 20px;
+  }
+  
+  .filter-bar button {
+    margin-right: 5px;
   }
