--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -150,7 +150,7 @@
 }
 
 .category-btn.active {
-  border: 4cappx solid #722424 !important;
+  border: 4px solid #722424 !important;
   color: #000000 !important;
 }
 
