--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,9 +1,7 @@
-/* The actual timeline (the vertical ruler) */
 .main-timeline-2 {
   position: relative;
 }
 
-/* The actual timeline (the vertical ruler) */
 .main-timeline-2::after {
   content: "";
   position: absolute;
@@ -15,14 +13,12 @@
   margin-left: -3px;
 }
 
-/* Container around content */
 .timeline-2 {
   position: relative;
   background-color: inherit;
   width: 50%;
 }
 
-/* The circles on the timeline */
 .timeline-2::after {
   content: "";
   position: absolute;
@@ -35,30 +31,16 @@
   z-index: 1;
 }
 
-.main-container {
-  background-color: #F0F2F5;
-}
-
-.container {
-  background-color: #e4f0f4;
-  padding: 30px;
-  border-radius: 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-/* Place the container to the left */
 .left-2 {
   padding: 0px 40px 20px 0px;
   left: 0;
 }
 
-/* Place the container to the right */
 .right-2 {
   padding: 0px 0px 20px 40px;
   left: 50%;
 }
 
-/* Add arrows to the left container (pointing right) */
 .left-2::before {
   content: " ";
   position: absolute;
@@ -70,7 +52,6 @@
   border-color: transparent transparent transparent white;
 }
 
-/* Add arrows to the right container (pointing left) */
 .right-2::before {
   content: " ";
   position: absolute;
@@ -82,9 +63,52 @@
   border-color: transparent white transparent transparent;
 }
 
-/* Fix the circle for containers on the right side */
 .right-2::after {
   left: -14px;
+}
+
+@media screen and (max-width: 600px) {
+
+  .main-timeline-2::after {
+    left: 31px;
+  }
+
+  .timeline-2 {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+  .timeline-2::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+  .left-2::after,
+  .right-2::after {
+    left: 18px;
+  }
+
+  .left-2::before {
+    right: auto;
+  }
+
+  .right-2 {
+    left: 0%;
+  }
+}
+
+.main-container {
+  background-color: #F0F2F5;
+}
+
+.container {
+  background-color: #e4f0f4;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .element-hidden {
@@ -100,45 +124,6 @@
 
 .card {
   position: relative;
-}
-
-/* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
-
-  /* Place the timelime to the left */
-  .main-timeline-2::after {
-    left: 31px;
-  }
-
-  /* Full-width containers */
-  .timeline-2 {
-    width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
-  }
-
-  /* Make sure that all arrows are pointing leftwards */
-  .timeline-2::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-  }
-
-  /* Make sure all circles are at the same spot */
-  .left-2::after,
-  .right-2::after {
-    left: 18px;
-  }
-
-  .left-2::before {
-    right: auto;
-  }
-
-  /* Make all right containers behave like the left ones */
-  .right-2 {
-    left: 0%;
-  }
 }
 
 .filter-bar {
@@ -158,6 +143,15 @@
   background-color: #CED0D2;
 }
 
+#toggleLabel {
+  bottom: 1px;
+  right: 5px;
+}
+
+.required-asterisk {
+  color: red;
+}
+
 @media print {
   .no-print {
     display: none !important;
@@ -173,5 +167,43 @@
 
   #toggleLabel::before {
     content: '' !important;
+  }
+
+  .timeline-2 {
+    width: 100% !important;
+    padding: 0 !important;
+    margin-bottom: 20px;
+  }
+
+  .left-2, .right-2 {
+    left: 0 !important;
+    padding: 0 !important;
+  }
+
+  .main-timeline-2::after {
+    display: none !important;
+  }
+
+  .timeline-2::after, .left-2::before, .right-2::before {
+    display: none !important;
+  }
+
+  .card-body .row {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .card-body .col-md-6 {
+    flex: 1;
+  }
+
+  .card-body img.card-img-top {
+    max-width: 100px;
+    height: auto;
+    object-fit: contain;
+    border-radius: 5px; 
+    position: absolute;
+    top: 10px;
+    right: 10px;
   }
 }
